--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#6ab96f</color>
+    <color name="background">#302F2F</color>
+    <color name="lineColor">#FFFFFF</color>
 </resources>
